--- a/css/style.css
+++ b/css/style.css
@@ -4751,6 +4751,10 @@ div.wave-block:nth-child(17):after {
   -webkit-transition: 1s;
   transition: 1s;
 }
+.popup-dialog-menu.active-menu {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
 @media (max-width: 1024px) {
   .popup-dialog-menu {
     width: 549px;
