--- a/css/style.css
+++ b/css/style.css
@@ -5580,6 +5580,17 @@ div.wave-block:nth-child(17):after {
   text-align: center;
   border-collapse: collapse;
   background: #fbfaf8;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: 0;
+  transition: 0.3s ease;
+}
+.popup-repair-types-content-table__list.slide-active {
+  position: relative;
+  opacity: 1;
+  z-index: 1;
 }
 .popup-repair-types-content-table__list tr {
   height: 49px;
@@ -8561,4 +8572,66 @@ strong {
 
 .slider-dots {
   display: none;
+}
+.sk-wave {
+  width: 6em;
+  height: 4em;
+  margin: auto;
+  text-align: center;
+  font-size: 1em;
+}
+.sk-wave .sk-rect {
+  background: -webkit-gradient(linear, left top, right top, from(#f48922), to(#ffb015));
+  background: linear-gradient(90deg, #f48922 0%, #ffb015 100%);
+  height: 100%;
+  width: 0.5em;
+  display: inline-block;
+  -webkit-animation: sk-wave-stretch-delay 1.2s infinite ease-in-out;
+  animation: sk-wave-stretch-delay 1.2s infinite ease-in-out;
+}
+.sk-wave .sk-rect-1 {
+  -webkit-animation-delay: -1.2s;
+  animation-delay: -1.2s;
+}
+.sk-wave .sk-rect-2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+.sk-wave .sk-rect-3 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+.sk-wave .sk-rect-4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+.sk-wave .sk-rect-5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-wave-stretch-delay {
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+    transform: scaleY(0.4);
+  }
+  20% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+
+@keyframes sk-wave-stretch-delay {
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+    transform: scaleY(0.4);
+  }
+  20% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
 }
